# PAIR

backend/: .gitignore  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/seeds/: 001_fsm_seed.sql
backend/alembic/versions/: 0c26454efe59_fsm_tables.py  2acf10a1d8c7_fsm_seed_data.py  8aeb3071352e_review_items.py
backend/app/: database.py  main.py
backend/app/core/: exceptions.py  fsm.py  seeder.py
backend/app/modules/reviews/: actions.py  dao.py  dependencies.py  interface.py  router.py  schemas.py  service.py
backend/app/modules/reviews/models/: __init__.py  action.py  review_item.py  state.py  state_transition.py
frontend/: Makefile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: reviews.ts
frontend/src/components/: ActionButtons.tsx  DetailPanel.tsx  QueueItem.tsx  QueuePanel.tsx
frontend/src/hooks/: useReviews.ts
frontend/src/types/: review.ts
